# raycasting-cg-1

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/implementations/: AABB.cpp  ListMesh.cpp  Matrix4.cpp  Plain.cpp  Sphere.cpp  Texture.cpp  Triangle.cpp  Vector4.cpp
utils/: AABB.hpp  BVH.hpp  HitRecord.hpp  ListMesh.hpp  Matrix4.hpp  Object.hpp  Plain.hpp  Point3.hpp  Point4.hpp  Quaternion.hpp  Sphere.hpp  Texture.hpp  Triangle.hpp  Vector3.hpp  Vector4.hpp
